2008-02-22  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendnetwork.c:
	Update the network backend to use inline files and
	remove the default workgroup link. Also add dns-sd
	support (not used yet). (#509600)
	Patch from A. Walton

2008-02-22  Carlos Garcia Campos  <carlosgc@gnome.org>

	* daemon/gvfsbackendsftp.c: (handle_login), (do_mount):
	Ask for the username in the sftp login when it's not
	provided. (#511509)
	
2008-02-21  Christian Persch  <chpe@gnome.org>

	* configure.ac: Update hal req to 0.5.10. Bug #515779.

2008-02-21  Carlos Garcia Campos  <carlosgc@gnome.org>

	* daemon/gvfsbackendsftp.c: (handle_login):
	Fix memory leak.
	
2008-02-21  Carlos Garcia Campos  <carlosgc@gnome.org>

	* daemon/gvfsbackendsftp.c: (handle_login):
	Fix password save flags initialization.
	
2008-02-21  Alexander Larsson  <alexl@redhat.com>

	* configure.ac (DISTCHECK_CONFIGURE_FLAGS):
	Require latest glib for the contains_file
	change.

2008-02-21  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        (g_daemon_file_prefix_matches):
        (g_daemon_file_file_iface_init):
	Update for the contains_file rename in gio.

2008-02-20  Alexander Larsson  <alexl@redhat.com>

        * daemon/Makefile.am:
        * daemon/gvfsbackendsmb.c:
        * daemon/gvfsbackendsmbbrowse.c:
	If gconf availible, initialize default workgroup
	from gconf.
	Handle X-GNOME-DEFAULT-WORKGROUP special case
	to list the current workgroup

2008-02-20  Alexander Larsson  <alexl@redhat.com>

	* daemon/daemon-main.c (send_spawned):
	Fix "_" spew.
	
2008-02-20  Alexander Larsson  <alexl@redhat.com>

	* daemon/gvfsbackendsftp.c:
	Fix spelling in string

2008-02-20  Alexander Larsson  <alexl@redhat.com>

        * common/gmountsource.[ch]:
	Add ask_question support

        * daemon/gvfsbackendsftp.c:
	Handle host identity changed messages (#517460)

	Patch from Carlos Garcia Campos

2008-02-20  Alexander Larsson  <alexl@redhat.com>

        * daemon/Makefile.am: